tests/fixtures/negative/release-engineering/PrintlnInProduction.kt
package com.example.releaseengineering

fun main() {
    println("script entry point")
}
